# ciet-opcua-server-client-rs

./: .gitignore  Cargo.toml  README.md
license_files/: csv_license  egui_license  env_logger_license  genfoam_gpl3  intel-mkl-license  local_ip_address_license  log_license  ndarray_license  ndarray_linalg_license  openblas_license  openblas_license.md  peroxide_license  roots_license  serde_license  thiserror_license  uom_license
pki/own/: cert.der
pki/private/: private.pem
src/client/heater-with-reactor-feedback/: app.rs  main.rs
src/client/heater-with-reactor-feedback/app/panels/: mod.rs  opcua_panel.rs
src/client/isothermal-and-heater/: app.rs  main.rs
src/client/isothermal-and-heater/app/panels/: decaying_sinusoid.rs  first_order_transfer_fn.rs  mod.rs  opcua_panel.rs  second_order_transfer_fn.rs
src/server/isothermal-and-heater/: main.rs
src/server/isothermal-and-heater/ciet_libraries/: mod.rs  therminol_component.rs
src/server/isothermal-and-heater/ciet_libraries/component_libraries/: ctah_branch.rs  dhx_branch.rs  heater_branch.rs  mod.rs
src/server/isothermal-and-heater/ciet_libraries/heater_v2_bare_heat_transfer_lib/: mod.rs
src/server/isothermal-and-heater/ciet_libraries/heater_v2_bare_heat_transfer_lib/heater/: mod.rs
src/server/isothermal-and-heater/ciet_libraries/heater_v2_bare_heat_transfer_lib/heater/heater_top_and_bottom_head_bare/: calculation.rs  fluid_entity.rs  postprocessing.rs  preprocessing.rs
src/server/isothermal-and-heater/ciet_libraries/heater_v2_bare_heat_transfer_lib/heater/heater_version_2_bare/: calculation.rs  fluid_entity.rs  postprocessing.rs  preprocessing.rs
src/server/isothermal-and-heater/ciet_libraries/heater_v2_bare_heat_transfer_lib/heater/static_mixer_mx_10/: calculation.rs  fluid_entity.rs  mod.rs  postprocessing.rs  preprocessing.rs
src/server/isothermal-and-heater/ciet_libraries/heater_v2_bare_heat_transfer_lib/heater/struct_supports/: calculation.rs  mod.rs  (+2 more)
src/server/isothermal-and-heater/examples/: ciet_server_old_with_deviation.rs  mod.rs
src/server/isothermal-and-heater/examples/ciet_functions_for_deviation_calcs/: mod.rs
