[package]
name = "ciet-opcua-server-client-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"


[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[dependencies]
thermal_hydraulics_rs = "0.0.9"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

