[package]
name = "ciet-opcua-server-client-rs"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/isothermal-and-heater/main.rs"


[[bin]]
name = "server"
path = "src/server/isothermal-and-heater/main.rs"

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
env_logger = "0.10.0"
local-ip-address = "0.5.6"
log = "0.4.20"
opcua = { git = "https://github.com/locka99/opcua", version = "0.12.0" }
roots = "0.0.8"
thermal_hydraulics_rs = "0.0.9"
serde = { version = "1", features = ["derive"] }
egui_plot = "0.23.0"
uom = "0.35.0"
csv = "1.3.0"
ndarray = "0.15.6"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

